# rknn_yolox_nano-rtmpose

examples/aeke_pose_deploy/: CMakeLists.txt  README.md  build-android_RK3588.sh
examples/aeke_pose_deploy/data/: yuv.txt  yuvtorgb.py
examples/aeke_pose_deploy/include/: BYTETracker.h  aeke_pose.hpp  postprocess.h  preprocess.h  rknnPool.hpp
examples/aeke_pose_deploy/model/: dataset.txt  test.py
examples/aeke_pose_deploy/model/det/: rtmdetnp.onnx
examples/aeke_pose_deploy/python/: main.py  rknn_executor.py  rtmdet.py  rtmpose.py  yolox_nano.py
examples/aeke_pose_deploy/src/: 1.txt  main.cc
examples/aeke_pose_deploy/src/alg/: aeke_pose.cc  postprocess.cc  preprocess.cc
examples/aeke_pose_deploy/src/bytetrack/: BYTETracker.cpp  utils.cpp
